replace terraform with tofu

--- a/.github/workflows/tf-admin-create-aco-creds.yml
+++ b/.github/workflows/tf-admin-create-aco-creds.yml
@@ -20,7 +20,7 @@ on:
 
 env:
   TENV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+
 defaults:
   run:
     working-directory: ./terraform/services/admin-create-aco-creds
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
-      - uses: ./actions/setup-tenv # TODO Use cmsgov/cdap/actions/setup-tenv@<hash> after this lands in main
+      - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40  
       - run: tofu fmt -check -diff -recursive .
 
   plan-apply:
@@ -48,7 +48,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
-      - uses: ./actions/setup-tenv # TODO Use cmsgov/cdap/actions/setup-tenv@<hash> after this lands in main
+      - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
