--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -18,6 +18,13 @@ on:
         required: false
         type: boolean
 
+env:
+  TENV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+defaults:
+  run:
+    working-directory: ./terraform/services/alarm-to-slack
+
 jobs:
   python-lint-test:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
@@ -26,16 +33,17 @@ jobs:
       - name: Install Python dependencies & Run Lint and Unit Tests
         run: |
           pip install pylint pytest
-          pylint terraform/services/alarm-to-slack/lambda_src
-          pytest terraform/services/alarm-to-slack/lambda_src
+          pylint lambda_src
+          pytest lambda_src
 
   check-fmt:
     needs: python-lint-test
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     steps:
       - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/alarm-to-slack
+      - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
+      - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40
+      - run: tofu fmt -check -diff -recursive .
 
   plan-apply-deploy:
     needs: check-fmt
@@ -43,9 +51,6 @@ jobs:
       contents: read
       id-token: write
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
-    defaults:
-      run:
-        working-directory: ./terraform/services/alarm-to-slack
     strategy:
       fail-fast: false
       matrix:
@@ -54,21 +59,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./actions/setup-tfenv-terraform
+      - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
+      - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40
 
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform plan -out=tf.plan
+      - run: tofu init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
+      - run: tofu plan -out=tf.plan
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
           TF_VAR_legacy: "false"
       - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: |
-          terraform apply -auto-approve tf.plan
+          tofu apply -auto-approve tf.plan
           cd lambda_src
           zip deploy.zip lambda_function.py
           aws lambda update-function-code --function-name "${{ matrix.app }}-${{ matrix.env }}-alarm-to-slack" --zip-file fileb://deploy.zip
