--- a/.github/workflows/tf-tfstate.yml
+++ b/.github/workflows/tf-tfstate.yml
@@ -8,6 +8,8 @@ on:
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/services/tfstate/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
