--- a/.github/workflows/tf-api-waf.yml
+++ b/.github/workflows/tf-api-waf.yml
@@ -7,6 +7,8 @@ on:
       - .github/workflows/tf-api-waf.yml
       - terraform/modules/firewall/**
       - terraform/services/api-waf/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
