--- a/.github/workflows/tf-backup-plan.yml
+++ b/.github/workflows/tf-backup-plan.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - .github/workflows/tf-backup-plan.yml
       - terraform/services/backup-plan/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
