--- a/.github/workflows/tf-kms-keys.yml
+++ b/.github/workflows/tf-kms-keys.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - .github/workflows/tf-kms-keys.yml
       - terraform/services/kms-keys/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
