--- a/.github/workflows/tf-security-groups.yml
+++ b/.github/workflows/tf-security-groups.yml
@@ -7,6 +7,8 @@ on:
       - .github/workflows/tf-security-groups.yml
       - terraform/modules/vpc/**
       - terraform/services/security-groups/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
