--- a/.github/workflows/tf-admin-aco-deny.yml
+++ b/.github/workflows/tf-admin-aco-deny.yml
@@ -4,14 +4,14 @@ run-name: tf-admin-aco-deny ${{ (inputs.apply || (github.event_name == 'push' &&
 on:
   push:
     paths:
-      # - .github/workflows/tf-admin-aco-deny.yml
-      # - terraform/modules/bucket/**
-      # - terraform/modules/key/**
-      # - terraform/modules/function/**
-      # - terraform/modules/queue/**
-      # - terraform/modules/subnets/**
+      - .github/workflows/tf-admin-aco-deny.yml
+      - terraform/modules/bucket/**
+      - terraform/modules/key/**
+      - terraform/modules/function/**
+      - terraform/modules/queue/**
+      - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      # - terraform/services/admin-aco-deny/**
+      - terraform/services/admin-aco-deny/**
   schedule:
     - cron: "*/5 * * * *"
   workflow_dispatch:
@@ -60,5 +60,5 @@ jobs:
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - if: inputs.apply || ((github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/jscott/PLT-1332')
+      - if: inputs.apply || ((github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/main')
         run: tofu apply -auto-approve tf.plan
