--- a/.github/workflows/tf-admin-aco-deny.yml
+++ b/.github/workflows/tf-admin-aco-deny.yml
@@ -1,4 +1,4 @@
-name: tf-admin-aco-deny-plt-1332
+name: tf-admin-aco-deny
 run-name: tf-admin-aco-deny ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
 
 on:
@@ -13,7 +13,7 @@ on:
       - terraform/modules/vpc/**
       - terraform/services/admin-aco-deny/**
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
