--- a/.github/workflows/tf-admin-create-aco-creds.yml
+++ b/.github/workflows/tf-admin-create-aco-creds.yml
@@ -60,5 +60,5 @@ jobs:
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply || ((github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/main')
         run: tofu apply -auto-approve tf.plan
