--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -74,7 +74,7 @@ jobs:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
           TF_VAR_legacy: "false"
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply || ((github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/main')
         run: |
           tofu apply -auto-approve tf.plan
           BUCKET_NAME=$(tofu output -raw zip_bucket_id)
