--- a/.github/workflows/tf-github-actions-oidc-provider.yml
+++ b/.github/workflows/tf-github-actions-oidc-provider.yml
@@ -52,5 +52,5 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
       - run: tofu init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
       - run: tofu plan -out=tf.plan
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply || ((github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/main')
         run: tofu apply -auto-approve tf.plan
