[PLT-1332] Adding cron trigger to service workflows. (#313)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1332

## 🛠 Changes

This PR adds a cron trigger of '12 14 * * 1-5' to all TF service
workflows to ensure that they are run at 9:12am or 10:12am (depending on
daylight savings) every weekday.

## ℹ️ Context

This change is being made to ensure that Terraform drift in any CDAP
service will be caught and corrected within one business day.

## 🧪 Validation

When these changes were pushed to a remote branch the 'on push' trigger
ran all affected workflows successfully. While this did not exercise the
cron triggers directly, it shows that the workflows remain syntactically
correct with the addition of the cron triggers.

--- a/.github/workflows/tf-admin-aco-deny.yml
+++ b/.github/workflows/tf-admin-aco-deny.yml
@@ -1,5 +1,5 @@
 name: tf-admin-aco-deny
-run-name: tf-admin-aco-deny ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
+run-name: tf-admin-aco-deny ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule') && 'apply' || 'plan' }}
 
 on:
   push:
@@ -12,6 +12,8 @@ on:
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
       - terraform/services/admin-aco-deny/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
@@ -58,5 +60,5 @@ jobs:
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule'
         run: tofu apply -auto-approve tf.plan
