--- a/.github/workflows/tf-opt-out-import.yml
+++ b/.github/workflows/tf-opt-out-import.yml
@@ -1,5 +1,5 @@
 name: tf-opt-out-import
-run-name: tf-opt-out-import ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
+run-name: tf-opt-out-import ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule') && 'apply' || 'plan' }}
 
 on:
   push:
@@ -12,6 +12,8 @@ on:
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
       - terraform/services/opt-out-import/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
@@ -61,5 +63,5 @@ jobs:
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule'
         run: tofu apply -auto-approve tf.plan
