--- a/.github/workflows/tf-api-waf.yml
+++ b/.github/workflows/tf-api-waf.yml
@@ -1,5 +1,5 @@
 name: tf-api-waf
-run-name: tf-api-waf ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
+run-name: tf-api-waf ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule') && 'apply' || 'plan' }}
 
 on:
   push:
@@ -7,6 +7,8 @@ on:
       - .github/workflows/tf-api-waf.yml
       - terraform/modules/firewall/**
       - terraform/services/api-waf/**
+  schedule:
+    - cron: "12 14 * * 1-5"
   workflow_dispatch:
     inputs:
       apply:
@@ -53,5 +55,5 @@ jobs:
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule'
         run: tofu apply -auto-approve tf.plan
