[PLT-1348] Remove lifecycle-transition filter (#312)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1348

## 🛠 Changes

Removed lifecycle transition filter on bucket module lifecycle
configuration. This is to ensure that non-current objects in all buckets
transition to IA after 30 days.
## ℹ️ Context

This change is to conform with security hub findings regarding bucket
lifecycle rules.

## 🧪 Validation

See checks.

---------

Co-authored-by: Sean Fern <seanfern@navapbc.com>

--- a/.github/workflows/tf-api-waf-sync.yml
+++ b/.github/workflows/tf-api-waf-sync.yml
@@ -63,11 +63,6 @@ jobs:
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule'
-        run: |
-          tofu apply -auto-approve tf.plan
-          BUCKET_NAME=$(tofu output -raw zip_bucket_id)
-          aws s3api put-object-tagging \
-            --bucket $BUCKET_NAME \
-            --key function.zip \
-            --tagging 'TagSet=[{Key=lifecycle-transition,Value=ia}]'
+      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+        run: tofu apply -auto-approve tf.plan
+
