--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -2,6 +2,11 @@ name: tf-alarm-to-slack
 run-name: tf-alarm-to-slack ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule') && 'apply' || 'plan' }}
 
 on:
+  workflow_run:
+    workflows: ["tofu-format-and-validate"]
+    types:
+      - completed
+      
   push:
     paths:
       - .github/workflows/tf-alarm-to-slack.yml
@@ -38,17 +43,7 @@ jobs:
           pylint lambda_src
           pytest lambda_src
 
-  check-fmt:
-    needs: python-lint-test
-    runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
-      - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40
-      - run: tofu fmt -check -diff -recursive .
-
   plan-apply-deploy:
-    needs: check-fmt
     permissions:
       contents: read
       id-token: write
