added workflows to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,27 @@
 version: 2
 updates:
-  - package-ecosystem: github-actions
-    directory: /actions/aws-params-env-action/
+  - package-ecosystem: "github-actions"
+    directory: "/"
     schedule:
-      interval: daily
+      interval: "daily"
     # Security updates only
     open-pull-requests-limit: 0
 
-  - package-ecosystem: npm
-    directory: /actions/aws-params-env-action/
+  - package-ecosystem: "npm"
+    directory: "/"
     schedule:
-      interval: daily
+      interval: "daily"
     # Security updates only
+    open-pull-requests-limit: 0
+
+  - package-ecosystem: "terraform" # Works for both Terraform and OpenTofu
+    directory: "/"
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 0
+
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "daily"
     open-pull-requests-limit: 0
