[PLT-1371] added workflows to dependabot (#323)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1371

## 🛠 Changes

Add coverage for workflows in the .cdap dependabot configuration,
including terraform.

## ℹ️ Context

Changes are for extended scan coverage by dependabot.  

## 🧪 Validation

see checks

---------

Co-authored-by: Sean Fern <seanfern@navapbc.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: github-actions
-    directory: /actions/aws-params-env-action/
+    directory: /
     schedule:
       interval: daily
     # Security updates only
@@ -12,4 +12,10 @@ updates:
     schedule:
       interval: daily
     # Security updates only
+    open-pull-requests-limit: 0
+
+  - package-ecosystem: terraform # Works for both Terraform and OpenTofu
+    directory: /
+    schedule:
+      interval: daily
     open-pull-requests-limit: 0
