Rename step in tofu-checks

--- a/.github/workflows/tofu-checks.yml
+++ b/.github/workflows/tofu-checks.yml
@@ -15,7 +15,7 @@ env:
   TENV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  format-and-validate:
+  check:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     steps:
       - uses: actions/checkout@v4
